# ogl_light

./: .gitignore  CMakeLists.txt  README.md
assimp-4.1.0/test/models/glTF2/BoxTextured-glTF/: BoxTextured_out.gltf
include/: camera.h  config.h  data.h  dirLight.h  light.h  mesh.h  model.h  pointLight.h  shader.h  spotLight.h  utils.h
include/glad/: glad.h
libs/assimp-4.1.0/test/models/PLY/: cube_test.ply
libs/assimp-4.1.0/test/models/glTF2/BoxTextured-glTF/: BoxTextured_out.gltf
resources/models/slime/: DirtSlime.fbx
resources/shader/: light.fs  vshader.vs
src/: camera.cpp  config.cpp  dirLight.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  pointLight.cpp  shader.cpp  spotLight.cpp  utils.cpp
